# ansible-module-gitupdater

./: .travis.yml  Makefile  README.md  README.rst  README_template.rst  description  gitup.py  gitupdater.py  pyproject.toml  read  requirements.txt  setup.py  tox.ini
.github/workflows/: tests.yml
test/: test_gitup.py
tests/: test_gitup.py
typings/ansible/module_utils/: basic.pyi  errors.pyi  pycompat24.pyi
typings/ansible/module_utils/common/: _collections_compat.pyi  _json_compat.pyi  _utils.pyi  arg_spec.pyi  collections.pyi  file.pyi  locale.pyi  parameters.pyi  process.pyi  sys_info.pyi  validation.pyi  warnings.pyi
typings/ansible/module_utils/common/text/: converters.pyi  formatters.pyi
typings/ansible/module_utils/compat/: _selectors2.pyi  selectors.pyi  selinux.pyi
typings/ansible/module_utils/distro/: __init__.pyi  _distro.pyi
typings/ansible/module_utils/parsing/: convert_bool.pyi
typings/ansible/module_utils/six/: __init__.pyi
typings/gitup/: __init__.pyi  config.pyi
