[tool.poetry]
name = "gitupdater"
version = "1.0.0"
description = "Ansible module for the git-repo-updater (gitup)."
authors = ["Josef Friedrich <josef@friedrich.rocks>"]
readme = "README.rst"
license = "GPL-3.0-only"
repository = "https://github.com/Josef-Friedrich/ansible-module-gitupdater"
classifiers = [
    "Private :: Do not Upload",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]

[tool.poetry.dependencies]
python = "^3.10"
gitup = { git = "https://github.com/earwig/git-repo-updater.git" }
ansible = "^10"

[tool.poetry.group.dev.dependencies]
pytest = "^8"
readme-patcher = "^0"
tox = "^4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
